--- a/package.json
+++ b/package.json
@@ -12,26 +12,27 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.1",
     "nodemon": "^2.0.16",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   },
   "devDependencies": {
-    "@hot-loader/react-dom": "^17.0.2",
-    "@types/jest": "^28.1.1",
+    "@hot-loader/react-dom": "^17.0.1",
+    "@types/jest": "^27.5.2",
     "clean-webpack-plugin": "^4.0.0",
     "cross-env": "^7.0.3",
     "css-loader": "^3.4.2",
     "html-webpack-plugin": "^4.5.2",
-    "jest": "^28.1.0",
+    "jest": "^27.1.1",
     "react-hot-loader": "^4.13.0",
     "sass": "^1.52.2",
     "sass-loader": "^10.1.1",
     "style-loader": "^1.1.3",
-    "ts-jest": "^28.0.4",
-    "ts-loader": "^6.2.2",
-    "typescript": "^4.6.4",
+    "ts-jest": "^27.1.1",
+    "ts-loader": "^6.2.1",
+    "typescript": "^3.8.3",
     "webpack": "^4.42.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-middleware": "^3.7.3",
