--- a/package.json
+++ b/package.json
@@ -21,14 +21,14 @@
   "devDependencies": {
     "@hot-loader/react-dom": "^17.0.1",
     "@types/jest": "^27.5.2",
+    "@types/react": "^17.0.45",
+    "@types/react-dom": "^18.0.5",
     "clean-webpack-plugin": "^4.0.0",
     "cross-env": "^7.0.3",
     "css-loader": "^3.4.2",
     "html-webpack-plugin": "^4.5.2",
     "jest": "^27.1.1",
     "react-hot-loader": "^4.13.0",
-    "sass": "^1.52.2",
-    "sass-loader": "^10.1.1",
     "style-loader": "^1.1.3",
     "ts-jest": "^27.1.1",
     "ts-loader": "^6.2.1",
