--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "classnames": "^2.3.1",
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "nodemon": "^2.0.16",
@@ -20,13 +21,19 @@
   },
   "devDependencies": {
     "@hot-loader/react-dom": "^17.0.1",
+    "@types/classnames": "^2.3.1",
+    "@types/enzyme": "^3.10.12",
     "@types/jest": "^27.5.2",
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.7",
     "clean-webpack-plugin": "^4.0.0",
     "cross-env": "^7.0.3",
     "css-loader": "^3.4.2",
+    "enzyme": "^3.11.0",
+    "enzyme-to-json": "^3.6.2",
     "html-webpack-plugin": "^4.5.2",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^27.1.1",
     "react-hot-loader": "^4.13.0",
     "style-loader": "^1.1.3",
