--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "express": "^4.18.1",
     "nodemon": "^2.0.16",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "react-transition-group": "^4.4.2"
   },
   "devDependencies": {
     "@hot-loader/react-dom": "^17.0.1",
@@ -26,6 +27,7 @@
     "@types/jest": "^27.5.2",
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
+    "@types/react-transition-group": "^4.4.5",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.7",
     "clean-webpack-plugin": "^4.0.0",
     "cross-env": "^7.0.3",
