--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
     "@types/react-transition-group": "^4.4.5",
+    "@types/sass": "^1.43.1",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.7",
     "clean-webpack-plugin": "^4.0.0",
     "cross-env": "^7.0.3",
@@ -38,6 +39,8 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.1.1",
     "react-hot-loader": "^4.13.0",
+    "sass": "^1.52.2",
+    "sass-loader": "^10.1.1",
     "style-loader": "^1.1.3",
     "ts-jest": "^27.1.1",
     "ts-loader": "^6.2.1",
