--- a/package.json
+++ b/package.json
@@ -19,10 +19,13 @@
     "nodemon": "^2.0.16",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-transition-group": "^4.4.2"
+    "react-redux": "^8.0.2",
+    "react-transition-group": "^4.4.2",
+    "redux": "^4.2.0"
   },
   "devDependencies": {
     "@hot-loader/react-dom": "^17.0.1",
+    "@redux-devtools/core": "^3.13.1",
     "@types/classnames": "^2.3.1",
     "@types/enzyme": "^3.10.12",
     "@types/jest": "^27.5.2",
@@ -40,6 +43,7 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.1.1",
     "react-hot-loader": "^4.13.0",
+    "redux-devtools-extension": "^2.13.9",
     "sass": "^1.52.2",
     "sass-loader": "^10.1.1",
     "style-loader": "^1.1.3",
