--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.3",
     "axios": "^0.27.2",
     "classnames": "^2.3.1",
     "cors": "^2.8.5",
@@ -43,7 +44,6 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.1.1",
     "react-hot-loader": "^4.13.0",
-    "redux-devtools-extension": "^2.13.9",
     "sass": "^1.52.2",
     "sass-loader": "^10.1.1",
     "style-loader": "^1.1.3",
