--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "nodemon": "^2.0.16",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-hook-form": "^6.15.4",
     "react-redux": "^8.0.2",
     "react-transition-group": "^4.4.2",
     "redux": "^4.2.0"
