--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "nodemon": "^2.0.16",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-hook-form": "^6.15.4",
+    "react-hook-form": "^7.33.1",
     "react-redux": "^8.0.2",
     "react-transition-group": "^4.4.2",
     "redux": "^4.2.0"
@@ -50,7 +50,7 @@
     "style-loader": "^1.1.3",
     "ts-jest": "^27.1.1",
     "ts-loader": "^6.2.1",
-    "typescript": "^3.8.3",
+    "typescript": "4.6.4",
     "webpack": "^4.42.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-middleware": "^3.7.3",
