--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@hookform/resolvers": "^2.4.0",
     "@reduxjs/toolkit": "^1.8.3",
+    "@types/react-router-dom": "^5.3.3",
     "axios": "^0.27.2",
     "classnames": "^2.3.1",
     "cors": "^2.8.5",
@@ -23,6 +24,7 @@
     "react-dom": "^17.0.1",
     "react-hook-form": "^7.33.1",
     "react-redux": "^8.0.2",
+    "react-router-dom": "^5.3.3",
     "react-transition-group": "^4.4.2",
     "redux": "^4.2.0",
     "yup": "^0.32.11"
