--- a/package.json
+++ b/package.json
@@ -1,13 +1,17 @@
 {
   "name": "project",
   "version": "1.0.0",
+  "engines": {
+    "node": "16.15.1",
+    "npm": "8.15.0"
+  },
   "description": "",
   "main": "index.js",
   "scripts": {
     "build:dev": "cross-env NODE_ENV=development webpack --config webpack.config.js",
-    "build:prod": "cross-env NODE_ENV=production webpack --config webpack.config.js",
+    "build": "cross-env NODE_ENV=production webpack --config webpack.config.js",
     "dev": "cross-env NODE_ENV=development CLIENT_ID=exFzdgSCpuf71EwpUibaFQ node ./bin/dev.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./dist/server/server.js"
   },
   "author": "",
   "license": "ISC",
@@ -28,9 +32,7 @@
     "react-router-dom": "^5.3.3",
     "react-transition-group": "^4.4.2",
     "redux": "^4.2.0",
-    "yup": "^0.32.11"
-  },
-  "devDependencies": {
+    "yup": "^0.32.11",
     "@hot-loader/react-dom": "^17.0.1",
     "@redux-devtools/core": "^3.13.1",
     "@types/classnames": "^2.3.1",
@@ -57,5 +59,8 @@
     "webpack-dev-server": "^4.9.3",
     "webpack-hot-middleware": "^2.25.0",
     "webpack-node-externals": "^3.0.0"
+  },
+  "devDependencies": {
+    
   }
 }
