--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
   "main": "index.js",
   "scripts": {
     "build:dev": "cross-env NODE_ENV=development webpack --config webpack.config.js",
-    "build": "cross-env NODE_ENV=production webpack --config webpack.config.js",
-    "dev": "cross-env NODE_ENV=development CLIENT_ID=exFzdgSCpuf71EwpUibaFQ node ./bin/dev.js",
-    "start": "node ./dist/server/server.js"
+    "build": "cross-env NODE_ENV=production CLIENT_ID=BYkWfQTF_C6Uf65AhV745A webpack --config webpack.config.js",
+    "dev": "cross-env NODE_ENV=development REDIRECT_URI=http://localhost:3000/auth CLIENT_ID=exFzdgSCpuf71EwpUibaFQ SECRET=llspliIY0sBA-voydz89yDt2r-N9EA node ./bin/dev.js",
+    "start": "cross-env REDIRECT_URI=https://rdt-mirror.herokuapp.com/auth SECRET=oJhM6Ai7zBS9bLOuN6v9ReL0aD8mUw node ./dist/server/server.js"
   },
   "author": "",
   "license": "ISC",
