--- a/package.json
+++ b/package.json
@@ -1,52 +1,50 @@
 {
-  "name": "project",
+  "name": "rdt-mirror",
   "version": "1.0.0",
   "engines": {
-    "node": "16.15.1",
-    "npm": "8.15.0"
+    "node": "16.x"
   },
   "description": "",
   "main": "index.js",
   "scripts": {
     "build:dev": "cross-env NODE_ENV=development webpack --config webpack.config.js",
-    "build": "cross-env NODE_ENV=production CLIENT_ID=BYkWfQTF_C6Uf65AhV745A webpack --config webpack.config.js",
+    "build": "cross-env NODE_ENV=production webpack --config webpack.config.js",
     "dev": "cross-env NODE_ENV=development REDIRECT_URI=http://localhost:3000/auth CLIENT_ID=exFzdgSCpuf71EwpUibaFQ SECRET=llspliIY0sBA-voydz89yDt2r-N9EA node ./bin/dev.js",
-    "start": "cross-env REDIRECT_URI=https://rdt-mirror.herokuapp.com/auth SECRET=oJhM6Ai7zBS9bLOuN6v9ReL0aD8mUw node ./dist/server/server.js"
+    "start": "cross-env node ./dist/server/server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@hookform/resolvers": "^2.4.0",
+    "@hot-loader/react-dom": "^17.0.1",
+    "@redux-devtools/core": "^3.13.1",
     "@reduxjs/toolkit": "^1.8.3",
+    "@types/classnames": "^2.3.1",
+    "@types/react": "^18.0.14",
+    "@types/react-dom": "^18.0.5",
     "@types/react-router-dom": "^5.3.3",
+    "@types/react-transition-group": "^4.4.5",
+    "@types/sass": "^1.43.1",
     "axios": "^0.27.2",
     "classnames": "^2.3.1",
+    "clean-webpack-plugin": "^4.0.0",
+    "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
-    "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
+    "css-loader": "^3.4.2",
     "express": "^4.18.1",
+    "helmet": "^5.1.1",
+    "html-webpack-plugin": "^4.5.2",
+    "identity-obj-proxy": "^3.0.0",
     "nodemon": "^2.0.16",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-hook-form": "^7.33.1",
+    "react-hot-loader": "^4.13.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^5.3.3",
     "react-transition-group": "^4.4.2",
     "redux": "^4.2.0",
-    "yup": "^0.32.11",
-    "@hot-loader/react-dom": "^17.0.1",
-    "@redux-devtools/core": "^3.13.1",
-    "@types/classnames": "^2.3.1",
-    "@types/react": "^18.0.14",
-    "@types/react-dom": "^18.0.5",
-    "@types/react-transition-group": "^4.4.5",
-    "@types/sass": "^1.43.1",
-    "clean-webpack-plugin": "^4.0.0",
-    "cross-env": "^7.0.3",
-    "css-loader": "^3.4.2",
-    "html-webpack-plugin": "^4.5.2",
-    "identity-obj-proxy": "^3.0.0",
-    "jest": "^27.1.1",
-    "react-hot-loader": "^4.13.0",
     "sass": "^1.52.2",
     "sass-loader": "^10.1.1",
     "style-loader": "^1.1.3",
@@ -58,9 +56,7 @@
     "webpack-dev-middleware": "^3.7.3",
     "webpack-dev-server": "^4.9.3",
     "webpack-hot-middleware": "^2.25.0",
-    "webpack-node-externals": "^3.0.0"
-  },
-  "devDependencies": {
-    
+    "webpack-node-externals": "^3.0.0",
+    "yup": "^0.32.11"
   }
 }
