--- a/package.json
+++ b/package.json
@@ -15,40 +15,42 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cross-env": "^7.0.3",
     "@hookform/resolvers": "^2.4.0",
-    "@hot-loader/react-dom": "^17.0.1",
     "@redux-devtools/core": "^3.13.1",
     "@reduxjs/toolkit": "^1.8.3",
+    "axios": "^0.27.2",
+    "classnames": "^2.3.1",
+    "compression": "^1.7.4",
+    "cookie-parser": "^1.4.6",
+    "express": "^4.18.1",
+    "helmet": "^5.1.1",
+    "nodemon": "^2.0.16",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-hot-loader": "^4.13.0",
+    "react-hook-form": "^7.33.1",
+    "react-redux": "^8.0.2",
+    "react-router-dom": "^5.3.3",
+    "react-transition-group": "^4.4.2",
+    "redux": "^4.2.0",
+    "yup": "^0.32.11"
+  },
+  "devDependencies": {
     "@types/classnames": "^2.3.1",
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
     "@types/react-router-dom": "^5.3.3",
     "@types/react-transition-group": "^4.4.5",
     "@types/sass": "^1.43.1",
-    "axios": "^0.27.2",
-    "classnames": "^2.3.1",
+    "@hot-loader/react-dom": "^17.0.1",
     "clean-webpack-plugin": "^4.0.0",
-    "compression": "^1.7.4",
-    "cookie-parser": "^1.4.6",
-    "cross-env": "^7.0.3",
-    "css-loader": "^3.4.2",
-    "express": "^4.18.1",
-    "helmet": "^5.1.1",
     "html-webpack-plugin": "^4.5.2",
     "identity-obj-proxy": "^3.0.0",
-    "nodemon": "^2.0.16",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-hook-form": "^7.33.1",
-    "react-hot-loader": "^4.13.0",
-    "react-redux": "^8.0.2",
-    "react-router-dom": "^5.3.3",
-    "react-transition-group": "^4.4.2",
-    "redux": "^4.2.0",
+    "css-loader": "^3.4.2",
     "sass": "^1.52.2",
     "sass-loader": "^10.1.1",
     "style-loader": "^1.1.3",
-    "ts-jest": "^27.1.1",
     "ts-loader": "^6.2.1",
     "typescript": "4.6.4",
     "webpack": "^4.42.0",
@@ -56,7 +58,6 @@
     "webpack-dev-middleware": "^3.7.3",
     "webpack-dev-server": "^4.9.3",
     "webpack-hot-middleware": "^2.25.0",
-    "webpack-node-externals": "^3.0.0",
-    "yup": "^0.32.11"
+    "webpack-node-externals": "^3.0.0"
   }
 }
