--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "cross-env": "^7.0.3",
     "@hookform/resolvers": "^2.4.0",
     "@redux-devtools/core": "^3.13.1",
     "@reduxjs/toolkit": "^1.8.3",
@@ -23,13 +22,14 @@
     "classnames": "^2.3.1",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
+    "cross-env": "^7.0.3",
     "express": "^4.18.1",
     "helmet": "^5.1.1",
     "nodemon": "^2.0.16",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-hot-loader": "^4.13.0",
     "react-hook-form": "^7.33.1",
+    "react-hot-loader": "^4.13.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^5.3.3",
     "react-transition-group": "^4.4.2",
@@ -37,16 +37,17 @@
     "yup": "^0.32.11"
   },
   "devDependencies": {
+    "@hot-loader/react-dom": "^17.0.1",
     "@types/classnames": "^2.3.1",
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
     "@types/react-router-dom": "^5.3.3",
     "@types/react-transition-group": "^4.4.5",
     "@types/sass": "^1.43.1",
-    "@hot-loader/react-dom": "^17.0.1",
     "clean-webpack-plugin": "^4.0.0",
-    "html-webpack-plugin": "^4.5.2",
     "css-loader": "^3.4.2",
+    "fork-ts-checker-webpack-plugin": "^6.5.2",
+    "html-webpack-plugin": "^4.5.2",
     "sass": "^1.52.2",
     "sass-loader": "^10.1.1",
     "style-loader": "^1.1.3",
